--- a/src/App.css
+++ b/src/App.css
@@ -38,14 +38,19 @@
 }
 .submitDiv{
   text-align: center;
-  display: block;
+  
+  display: inline;;
   padding-right: 10px;
+  padding-left: 40%;
+}
+.submitDiv:disabled{
+  background-color: white;
 }
 .AddAuthor{
   
   width: 100%;
-  padding-left: 30%;
-  padding-right: 30%;
+  padding-left: 20%;
+  padding-right: 20%;
   text-align: left;
   display: block;
   
@@ -59,6 +64,7 @@
 }
 
 .inputClass{
+  height: 50px;
   background-color:  #F0F7FD;
   padding-bottom: 10px;
   width: 95%;
@@ -67,20 +73,19 @@
   border-left:5px solid #d0e3f0;
 }
 .inputClasslast{
+  height: 50px;
   background-color:   #F0F7FD;
   border-style: solid;
   border-color: rgb(255, 255, 255);
   border-left:5px solid  #d0e3f0;
- 
-    padding-bottom: 10px;
-    padding-right: 10px;
-    width: 92%;
+  padding-bottom: 10px;
+  padding-right: 100px;
+  width: 85%;
     
 }
 .inputClassButton{
   background-color: #F0F7FD;
   border: solid #d0e3f0;
-  padding-top: -12px;
   height: 40px;
   width: 40px;
   text-align: center;
@@ -119,8 +124,5 @@
   font-weight: 600;
   color: rgba(252, 0, 0, 0.664);
   padding-bottom: 10px;
-  
-
- 
-  
+    
 }
